--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: linear-gradient(to bottom, #f8fafc, #f1f5f9);
+    background: #f9fafb;
   }
 
   code {
